Fix header breaking on safari.

--- a/hkm/static/hkm/css/main.css
+++ b/hkm/static/hkm/css/main.css
@@ -7782,13 +7782,15 @@ button.navbar-toggle {
     transform: rotate(0); }
 
 .navigation-links {
-  float: right; }
+  float: right;
+  max-height: 70px; }
   .navigation-links ul {
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: row;
-    align-items: center; }
+    align-items: center;
+    max-height: 70px; }
     .navigation-links ul li {
       list-style: none;
       display: inline-block;
@@ -7804,7 +7806,8 @@ button.navbar-toggle {
       .navigation-links ul li > .dropdown-menu {
         display: none; }
       .navigation-links ul li.open > .dropdown-menu {
-        display: block; }
+        display: block;
+        max-height: 140px; }
     .navigation-links ul.dropdown-menu {
       background-color: #fff;
       left: 50%;
@@ -7827,11 +7830,13 @@ button.navbar-toggle {
       background-color: #fff;
       top: 60px;
       width: 100%;
-      z-index: 150; }
+      z-index: 150;
+      max-height: 400px; }
       .navigation-links ul {
         width: 100%;
         text-align: center;
-        flex-direction: column; }
+        flex-direction: column;
+        max-height: 400px; }
         .navigation-links ul li {
           display: block; }
           .navigation-links ul li a {
@@ -7891,8 +7896,8 @@ button.navbar-toggle {
 
 .cart_icons {
   min-width: 55px;
-  height: 100%;
   display: flex;
+  height: 25px;
   justify-content: space-between; }
 
 .cart_svg {
