--- a/hkm/static/hkm/scss/_navbar.scss
+++ b/hkm/static/hkm/scss/_navbar.scss
@@ -37,7 +37,7 @@ button.navbar-toggle {
     span {
         background-color: $color-hkm-purple;
         transition: all 0.15s ease;
-        
+
         &:nth-child(2) {
             transform: rotate(40deg);
             transform-origin: left;
@@ -74,6 +74,7 @@ button.navbar-toggle {
 
 .navigation-links {
     float: right;
+    max-height: 70px;
 
     ul {
         margin: 0;
@@ -81,6 +82,7 @@ button.navbar-toggle {
         display: flex;
         flex-direction: row;
         align-items: center;
+        max-height: 70px;
 
         li {
             list-style: none;
@@ -107,6 +109,7 @@ button.navbar-toggle {
             &.open {
                 > .dropdown-menu {
                     display: block;
+                    max-height: 140px;
                 }
             }
         }
@@ -142,11 +145,13 @@ button.navbar-toggle {
         top: 60px;
         width: 100%;
         z-index: 150;
+        max-height: 400px;
 
         ul {
             width: 100%;
             text-align: center;
             flex-direction: column;
+            max-height: 400px;
 
             li {
                 display: block;
@@ -227,8 +232,8 @@ button.navbar-toggle {
 
     &_icons {
         min-width: 55px;
-        height: 100%;
         display: flex;
+        height: 25px;
         justify-content: space-between;
     }
 
